Revise 404 page title and content structure

--- a/404.html
+++ b/404.html
@@ -2,30 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Page Not Found</title>
+  <title>Oops – Page Not Found</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body class="error-page">
   <header class="site-header">
-    <div class="container">
-      <a href="index.html" class="site-title">My Website</a>
+    <div class="container header-inner">
+      <div class="branding">
+        <a href="index.html" class="logo-mark">SF</a>
+        <div class="brand-text">
+          <a href="index.html" class="site-title">SiteForge</a>
+          <p class="site-tagline">A tiny workshop for building better websites.</p>
+        </div>
+      </div>
     </div>
   </header>
 
   <main class="site-main">
-    <div class="container">
-      <section class="hero">
-        <h1>404 – Page Not Found</h1>
-        <p>The page you’re looking for doesn’t exist or may have been moved.</p>
-        <a class="button" href="index.html">Go back home</a>
-      </section>
-    </div>
+    <section class="hero hero-center">
+      <div class="container">
+        <h1>404 – This page doesn’t exist yet.</h1>
+        <p>
+          You’ve hit a placeholder. Head back to the main workshop and wire up a new page.
+        </p>
+        <div class="hero-actions">
+          <a class="button primary" href="index.html">Back to SiteForge</a>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="site-footer">
-    <div class="container">
-      <p>&copy; <span id="year"></span> Your Name.</p>
+    <div class="container footer-inner">
+      <p>&copy; <span id="year"></span> SiteForge.</p>
     </div>
   </footer>
 
